force-app/main/default/objects/CampaignRequest__c/CampaignRequest__c.object-meta.xml
<CustomObject>
    <label>Campaign Request</label>
    <pluralLabel>Campaign Requests</pluralLabel>
    <nameField>
        <label>Campaign Request Number</label>
        <type>AutoNumber</type>
        <displayFormat>CA-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>