force-app/main/default/objects/CampaignRequest__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>