force-app/main/default/objects/CampaignRequest__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <type>Text</type>
    <length>180</length>
</CustomField>