force-app/main/default/objects/CampaignRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default></value>
            <value><fullName>Pending Approval</fullName><default>false</default></value>
            <value><fullName>Approved</fullName><default>false</default></value>
            <value><fullName>Live</fullName><default>false</default></value>
            <value><fullName>Completed</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>